src/objects/smagicinteract__SMS_Magic_SetUp_Tracker__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting will hold the values of the steps that have been completed by the user.</description>
    <fields>
        <fullName>smagicinteract__step_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__step_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__step_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS Magic SetUp Tracker</label>
</CustomObject>